# SOFTWAREENGINEERPOWER

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  MANIFEST.in  Makefile  README.md  check-code-quality.sh  my_file.py  pyproject.toml  requirements.txt  run.sh  setup.cfg  setup.py
.github/workflows/: publish.yaml
my_folder/: my_nested_file.py
packaging/: my_file.py  my_other_file.py
packaging_demo/: colorized_demo.py  states_info.py
packaging_demo/my_folder/: __init__.py  my_nested_file.py
packaging_demo/my_folder/sub_package/: __init__.py
tests/: test_slow.py  test_states_info.py
tests/my_folder/: test_my_nested_file.py
